[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imagexy = {path = "../imagexy"}
index = {path = "../index"}

clap = {version = "3.2", features = ["derive", "cargo"]}

color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"

log = "0.4"
anyhow = "1"
